Add TestModel List/Add pages, controller, model

--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenuHotels.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/Menus/_AdminMenuHotels.cshtml
@@ -8,8 +8,9 @@
 	var adminArray = new List<AdminMenuItem>
 	{
 		new AdminMenuItem { Name = "HotelsIndex", Controller = "Hotels", Action = "Index", Text = "Hotels Home" },
-		new AdminMenuItem { Name = "HotelList", Controller = "Hotels", Action = "HotelList", Text = "Hotel List" },
-		new AdminMenuItem { Name = "RoomTypeList", Controller = "Hotels", Action = "RoomTypeList", Text = "Room Type List" }
+		new AdminMenuItem { Name = "HotelList", Controller = "Hotels", Action = "HotelList", Text = "Hotels" },
+		new AdminMenuItem { Name = "RoomTypeList", Controller = "Hotels", Action = "RoomTypeList", Text = "Room Types" },
+		new AdminMenuItem { Name = "TestModelList", Controller = "Hotels", Action = "TestModelList", Text = "Test Models" }
 	};
 	
 	// Model is the name of the menu item. Set the corresponding menu item Active property
