--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelList.cshtml
@@ -16,6 +16,7 @@
 			<tr>
 				<th>Code</th>
 				<th>Name</th>
+				<th>Email</th>
 				<th>   
 					<div class="cell-outer">
 						<div class="cell-inner">
@@ -33,8 +34,9 @@
 			@foreach (var tm in @Model)
 			{
 				<tr>
-					<td>@tm.Code</td>
+					<td>@tm.Code</td>	
 					<td>@tm.Name</td>
+					<td>@tm.Email</td>
 					<td style="width:80px;">
 
 						<div class="cell-outer">
