--- a/solution/Msh/Msh.WebApp/Views/Shared/_Layout.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
 	</footer>
 
 	<script src="~/lib/jquery/jquery.min.js"></script>
-	<script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
-	<script src="~/lib/jquery-validate/jquery.validate.unobtrusive.min.js"></script>
+	@* <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+	<script src="~/lib/jquery-validate/jquery.validate.unobtrusive.min.js"></script> *@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="~/lib/moment/moment.js"></script>
