--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelAdd.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.HotelCache.Models
+@using Msh.HotelCache.Models.Discounts
 @using Msh.WebApp.Models.Admin
 @model Msh.HotelCache.Models.Hotels.TestModel;
 
@@ -33,13 +34,13 @@
 				<span asp-validation-for="Name" class="text-danger"></span>
 			</div>
 
-			<div class="form-group mb-3">
+			@* <div class="form-group mb-3">
 				<label asp-for="Email" class="control-label"></label>&nbsp;<info-icon name="info-email"/>
 				<input asp-for="Email" class="form-control"/>
 				<span asp-validation-for="Email" class="text-danger"></span>
-			</div>
+			</div> *@
 			
-			<div class="form-group mb-3">
+			@* <div class="form-group mb-3">
 				<label asp-for="Password" class="control-label"></label>&nbsp;<info-icon name="info-password" />
 				<input asp-for="Password" class="form-control" />
 				<span asp-validation-for="Password" class="text-danger"></span>
@@ -49,10 +50,24 @@
 				<label asp-for="Language" class="control-label"></label>&nbsp;<info-icon name="info-language" />
 				<select asp-for="Language" class="form-control" asp-items="ViewBag.Languages">
 					<option value="">Please select a language</option>
-					
 				</select>
 				<span asp-validation-for="Language" class="text-danger"></span>
-			</div>
+			</div> *@
+			
+			@* <div class="form-group mb-3">
+				<label asp-for="Hotels" class="control-label"></label>&nbsp;<info-icon name="info-hotels" />
+				<select asp-for="Hotels" class="form-control" asp-items="ViewBag.Hotels" multiple>
+					<option value="">Please select hotels</option>
+				</select>
+				<span asp-validation-for="Language" class="text-danger"></span>
+			</div> *@
+
+			@* <div class="form-group mb-3">
+				<label asp-for="BookingStatus" class="control-label"></label>&nbsp;<info-icon name="info-booking-status" />
+				<select asp-for="BookingStatus" class="form-control" asp-items="Html.GetEnumSelectList<BookingStatus>()" >
+				</select>
+				<span asp-validation-for="Language" class="text-danger"></span>
+			</div> *@
 			
 			<div class="form-group mb-3">
 				<label asp-for="Notes" class="control-label"></label>&nbsp;<info-icon name="info-notes" />
@@ -112,6 +127,8 @@
 </div>
 
 @section Scripts {
+	
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-testmodel.js"></script>
 }
