--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelList.cshtml
@@ -16,11 +16,11 @@
 			<tr>
 				<th>Code</th>
 				<th>Name</th>
-				<th>Email</th>
+				
 				<th>   
 					<div class="cell-outer">
 						<div class="cell-inner">
-							<a href="javascript:window.mshMethods.addTestModel()">
+							<a asp-controller="Hotels" asp-action="TestModelAdd" >
 								<i class="fa-solid fa-plus"></i>
 							</a>
 						</div>
@@ -36,12 +36,12 @@
 				<tr>
 					<td>@tm.Code</td>	
 					<td>@tm.Name</td>
-					<td>@tm.Email</td>
+					
 					<td style="width:80px;">
 
 						<div class="cell-outer">
 							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.editTestModel('@tm.Code')">
+								<a asp-controller="Hotels" asp-action="TestModelEdit" asp-route-id="@tm.Code">
 									<i class="fa-solid fa-pen-to-square"></i>
 								</a>
 							</div>
@@ -72,6 +72,7 @@
 
 @section Scripts {
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-testmodel.js"></script>
 }
 
