--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/TestModelList.cshtml
@@ -1,10 +1,11 @@
-﻿@model List<Msh.HotelCache.Models.Hotels.TestModel>
+﻿@model IEnumerable<Msh.HotelCache.Models.Hotels.TestModel>
 @{
 	var title = "Test Models";
 	ViewData["Title"] = title;
-
-	await Html.RenderPartialAsync("Admin/Menus/_AdminMenuHotels", "TestModelList");
 }
+
+@await Html.PartialAsync("Admin/Menus/_AdminMenuHotels", "TestModelList")
+
 <div class="text-center">
 	<h1 class="display-4">@title</h1>
 	<p>A list of test models used to develop list and edit pages.</p>
@@ -41,7 +42,7 @@
 
 						<div class="cell-outer">
 							<div class="cell-inner">
-								<a asp-controller="Hotels" asp-action="TestModelEdit" asp-route-id="@tm.Code">
+								<a asp-controller="Hotels" asp-action="TestModelEdit" asp-route-code="@tm.Code">
 									<i class="fa-solid fa-pen-to-square"></i>
 								</a>
 							</div>
@@ -61,13 +62,10 @@
 </div>
 
 
-@{
-	await Html.RenderPartialAsync("Admin/_AdminErrorBlock", "");
-}
+@await Html.PartialAsync("Admin/_AdminErrorBlock", "")
+
 <div id="page-info" style="display:none;">
-	@{
-		await Html.RenderPartialAsync("Admin/_ListIconsInfo", "Test Models");
-	}
+	@await Html.PartialAsync("Admin/_ListIconsInfo", "Test Models")
 </div>
 
 @section Scripts {
