--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/Index.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@using Msh.Admin.Models.Const
+@{
 	var title = "Admin Hotels";
 	ViewData["Title"] = title;
-	await Html.RenderPartialAsync("Admin/Menus/_AdminMenuHotels", "HotelsIndex");
 }
+
+@await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "HotelsIndex" })
+
 
 <div class="text-center">
 	<h3 class="display-4">@title</h3>
