--- a/solution/Msh/Msh.WebApp/Views/Admin/Hotels/Index.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Admin/Hotels/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@model string;
 @{
 	var title = "Admin Hotels";
 	ViewData["Title"] = title;
@@ -8,6 +9,6 @@
 
 
 <div class="text-center">
-	<h3 class="display-4">@title</h3>
+	<h3 class="display-4">@title - User: @Model</h3>
 </div>
 
