--- a/solution/Msh/Msh.WebApp/Views/Home/Index.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@using Msh.Admin.Models.Const
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 class="display-4">Welcome</h1>
+	<p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuAdmin, currentItem = "AdminIndex" })
