REFACTOR - Move to Areas

--- a/solution/Msh/Msh.WebApp/Views/Shared/Components/AdminMenu/Default.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Components/AdminMenu/Default.cshtml
@@ -15,7 +15,7 @@
 					}
 					else
 					{
-						<a style="color: #337ab7;" class="nav-link " asp-area="" asp-controller="@item.Controller" asp-action="@item.Action">@item.Text</a>
+						<a style="color: #337ab7;" class="nav-link " asp-area="Admin" asp-controller="@item.Controller" asp-action="@item.Action">@item.Text</a>
 					}
 				</div>
 			}
