--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -24,7 +24,7 @@
 				<th>   
 					<div class="cell-outer">
 						<div class="cell-inner">
-							<a href="javascript:window.mshMethods.addHotel()">
+							<a asp-controller="Hotels" asp-action="HotelAdd" >
 								<i class="fa-solid fa-plus"></i>
 							</a>
 						</div>
