Update for hotel dates

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelAdd.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Msh.WebApp.Models.Admin
-@model Msh.HotelCache.Models.Hotels.Hotel;
+@model Msh.HotelCache.Models.Hotels.HotelBase;
 @{
 	var title = "Add Hotel";
     ViewData["Title"] = title;
