--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_EditCode.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_EditCode.cshtml
@@ -5,7 +5,7 @@
 
 @if (@Model.FormAction == "HotelEdit")
 {
-	<label class="form-control">@Model.FormAction</label>
+	<label class="form-control">@Model.KeyPropertyValue</label>
 	<input type="hidden" id="@Model.KeyPropertyName" name="@Model.KeyPropertyName" value="@Model.KeyPropertyValue" />
 }
 else
