--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
@@ -1,6 +1,9 @@
 ﻿@model Msh.WebApp.Models.Admin.SuccessAlert
+@{
+	var isSuccess = ViewBag?.IsSuccess ?? false;
+}
 
-@if (ViewBag.IsSuccess)
+@if (@isSuccess)
 {
 	<div class="alert alert-success alert-dismissible fade show" role="alert">
 		<strong>Success!</strong> You have saved the @Model.ModelName.<br/>
