--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -5,4 +5,6 @@
 	menuName = AdminConst.MenuAdmin, currentItem = "AdminIndex"
 })
 
-<h3>Administrator</h3>
+<div class="text-center">
+	<h1 class="display-6">Administrator</h1>
+</div>
