--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelList.cshtml
@@ -11,7 +11,7 @@
 
 
 <div class="text-center">
-	<h1 class="display-4">@title</h1>
+	<h1 class="display-6">@title</h1>
 </div>
 
 <div class="row">
@@ -91,6 +91,7 @@
 
 @section Scripts{
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-hotels.js"></script>
 }
 
