--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_EditCode.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_EditCode.cshtml
@@ -1,9 +1,11 @@
 ﻿@model Msh.WebApp.Models.Admin.SuccessAlert
 @{
 	var name = Model.KeyPropertyName;
+	var formAction = Model.FormAction;
+	var isEdit = formAction.EndsWith("Edit");
 }
 
-@if (@Model.FormAction == "HotelEdit")
+@if (isEdit)
 {
 	<label class="form-control">@Model.KeyPropertyValue</label>
 	<input type="hidden" id="@Model.KeyPropertyName" name="@Model.KeyPropertyName" value="@Model.KeyPropertyValue" />
@@ -12,6 +14,4 @@ else
 {
 	<input class="form-control" value="" type="text" id="@name" name="@name">
 	<span class="text-danger field-validation-valid" data-valmsg-for="@name" data-valmsg-replace="true"></span>
-	@* <input asp-for="@name" class="form-control" value="" />
-	<span asp-validation-for="@name" class="text-danger"></span> *@
 }
