--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelEditDates.cshtml
@@ -11,7 +11,7 @@
 <input type="hidden" id="hotel-code" value="@hotelCode" />
 
 <div class="text-center">
-	<h3 class="">@title for @hotelCode</h3>
+	<h1 class="display-6">@title for @hotelCode</h1>
 	<p>For more information click <info-icon name="info-hotel-dates" /></p>
 </div>
 
@@ -20,12 +20,21 @@
 	
 	</div>
 </div>
-<div class="row my-3">
+
+<div class="mt-3" style="display:flex;justify-content:start;">
+	<div class="input-group">
+		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
+		<a asp-contoller="Hotels" asp-action="HotelList" class="btn btn-outline-secondary">Return to list</a>
+	</div>
+		
+</div>
+
+@* <div class="row my-3">
 	<div class="col-12">
 		<button id="save-dates" class="btn btn-primary" class="mr-3">Save</button>
 		<a asp-contoller="Hotels" asp-action="HotelList" class="btn btn-secondary">Return to list</a>
 	</div>
-</div>
+</div> *@
 
 <div id="page-info" style="display:none;">
 	<div data-info-for="info-hotel-dates">
@@ -48,8 +57,9 @@
 </div>
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
-	<script src="~/js/mshapp/msh-apiservice.js"></script>
+	
 	<script src="~/js/admin/hotels/msh-admin-hotels.js"></script>
 }
 
