--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEdit.cshtml
@@ -1,27 +1,29 @@
-﻿@model Msh.HotelCache.Models.RoomTypes.RoomType;
+﻿@using Msh.WebApp.Models.Admin
+@model Msh.HotelCache.Models.RoomTypes.RoomType;
 @{
-	var formAction = ViewBag.FormAction;
+	var success = ViewBag.Success as SuccessAlert;
+	var formAction = success?.FormAction ?? "RoomTypeAdd";
 	var hotelCode = ViewBag.HotelCode;
-
+	var title = ViewData["Title"];
 }
+
+<div class="text-center">
+	<h1 class="display-6">@title</h1>
+	<p></p>
+</div>
+
+@await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
+
 <div class="row">
 	<div class="col-6">
 
 		<form asp-action="@formAction" asp-route-hotelCode="@hotelCode">
-
+			
 			<div class="form-group mb-3">
-				<label asp-for="Code" class="control-label">Room Type Code <info-icon name="info-room-type-code" /></label>
-				@if (formAction == "TestModelEdit")
-				{
-					<label class="form-control">@Model.Code</label>
-					<input type="hidden" id="Code" name="Code" value="@Model.Code" />
-				}
-				else
-				{
-					<input asp-for="Code" class="form-control" />
-				}
-				<span asp-validation-for="Code" class="text-danger"></span>
+				<label asp-for="Code" class="control-label">Hotel Code <info-icon name="info-room-type-code" /></label>
+				@await Html.PartialAsync("Hotels/_EditCode", success)
 			</div>
+
 			<div class="form-group mb-3">
 				<label asp-for="GroupCode" class="control-label">Group Code <info-icon name="info-group-code" /></label>
 				<input asp-for="GroupCode" class="form-control " />
@@ -134,8 +136,7 @@
 
 			<div class="input-group">
 				<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
-				<input type="button" value="Cancel" class="btn btn-outline-secondary" onclick="window.mshMethods.cancelRoomTypeEdit('@hotelCode')" />
-				<button type="submit" name="Command" value="Publish" id="publish-button" class="btn btn-outline-success">Publish <info-icon name="info-publish" /></button>
+				<a asp-controller="Hotels" asp-action="RoomTypeList" asp-route-hotelCode="@hotelCode" class="btn btn-outline-secondary">Return to list</a>
 			</div>
 		</form>
 
